fixing forms on mobile and lowercase to text data

--- a/src/components/EditPokemonModal/styles.module.scss
+++ b/src/components/EditPokemonModal/styles.module.scss
@@ -79,6 +79,7 @@
         input {
             height: 40px;
             padding-left: 1rem;
+            width: 100%;
 
             border: 1px solid lightgray;
             border-radius: 3px;
