--- a/src/components/NewPokemonModal/styles.module.scss
+++ b/src/components/NewPokemonModal/styles.module.scss
@@ -63,12 +63,15 @@
         gap: 12px;
 
         input {
-            font-size: 1rem;
-
+            width: 100%;
             height: 40px;
+            
             padding-left: 1rem;
+            
             border: 1px solid lightgray;
             border-radius: 3px;
+            
+            font-size: 1rem;
 
             &:not(:first-child()) {
                 text-transform: capitalize;
